--- a/contact.html
+++ b/contact.html
@@ -51,8 +51,9 @@
                 <select name="servicio" id="the-reason">
                     <option value="">Elije una opcion</option>
                     <option value="BARBERIA">Barberia</option>
-                    <option value="MASAJES">Masajes</option>
+                    <option value="MASAJES">Masajes Corporales</option>
                     <option value="PELUQUERIA">Peluqueria</option>
+                    <option value="FACIAL">Tratamiento Facial</option>
                     <option value="UNAS">Uñas</option>
                 </select>
 
